--- a/index.html
+++ b/index.html
@@ -1,21 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<script>
-		 function getComputerChoice () {
-			const possibleChoice = ["rock", "paper", "scissor"];
-			let randomNumber = Math.floor((Math.random() * 10 ) % 3);
-			let computerChoice = possibleChoice[randomNumber];
-			console.log(computerChoice);
-			return computerChoice;
-		 };
-		
-	</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script>
+      function getComputerChoice() {
+        const possibleChoice = ["rock", "paper", "scissor"];
+        let randomNumber = Math.floor((Math.random() * 10) % 3);
+        let computerChoice = possibleChoice[randomNumber];
+        return computerChoice;
+      }
+
+      function playRound(playerSelection, computerSelection) {
+        playerSelection = playerSelection.toLowerCase();
+        computerSelection = computerSelection.toLowerCase();
+        let result = undefined;
+        let userWin = 0;
+
+        if (playerSelection == computerSelection) {
+          result = `It's a draw. You chose ${playerSelection} and the computer also!`;
+        } else if (
+          (playerSelection == "rock" && computerSelection == "scissor") ||
+          (playerSelection == "paper" && computerSelection == "rock") ||
+          (playerSelection == "scissor" && computerSelection == "paper")
+        ) {
+          result = `User wins!! You chose ${playerSelection}, which beats the computer choice, ${computerSelection}.`;
+          userWin = 1;
+        } else {
+          result = `Computer wins!! You chose ${playerSelection}, which loses against the computer choice, ${computerSelection}.`;
+          userWin = -1;
+        }
+        return [result, userWin];
+      }
+
+      function game() {
+        let userResult = 0;
+        for (let i = 0; i < 5; i++) {
+          let computerSelection = getComputerChoice();
+          let playerSelection = prompt("Enter your choice please: ", "");
+          userResult += Number(
+            playRound(playerSelection, computerSelection)[1]
+          );
+          console.log(playRound(playerSelection, computerSelection)[0]);
+        }
+        console.log(userResult);
+        if (userResult > 0) {
+          console.log(
+            `Congratulations!! You won ${userResult} times to the computer!!`
+          );
+        } else if (userResult == 0) {
+          console.log(`You've drawn with the computer!`);
+        } else {
+          console.log(
+            `What a loser! You've lost ${
+              userResult * -1
+            } times against the computer`
+          );
+        }
+      }
+
+      game();
+    </script>
+  </body>
 </html>
