Shadows on winner button done

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
       </div>
       <div class="results body">
-        <div class="result player box">
+        <div id="result-player-box" class="result box">
           <div class="title"><p>You: </p></div>
           <div class="player-result"></div>
         </div>
-        <div class="result computer box">
+        <div id="result-computer-box"  class="result box">
           <div class="title"><p>Computer: </p></div>
           <div class="computer-result"></div>
         </div>
@@ -49,5 +49,3 @@
 </html>
 
 
-<!--AUDIO: WINNING sounds/zapsplat_multimedia_button_click_005_53866.mp3
-    Losing: sounds/Sad-SoundBible.com-759843766.wav -->
