--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="header">
         <h1 class="font-effect-neon">Rock, Paper, Scissors!!</h1>
         <h3>Do you got what it takes to beat the machine?</h3>
+        <p> (best of 5 wins!)</p>
       </div>
       <div class="game body">
         <div class="item box">
@@ -42,7 +43,7 @@
     </div>
     <div id="end-alert" class="disappear">
       <div id="end-desc"></div>
-      <a id="retry-btn"></a>
+      <button id="retry-btn"></button>
     </div>
    <footer><a id="anchor" href="https://github.com/MiguelBelo95">Ⓒ MiguelBelo95</a></footer>
   </body>
