Add fontAwesome links of github and Linkedin on Footer. Missing styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sofia&effect=fire|neon|outline"
     />
+    <script
+      src="https://kit.fontawesome.com/4c536a6bd5.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <script src="./logic.js" defer></script>
     <title>Document</title>
   </head>
@@ -59,13 +64,9 @@
     </div>
     <footer>
       <span><script>document.write(new Date().getFullYear())</script></span>
-      <a id="anchor" href="https://github.com/MiguelBelo95">Ⓒ MiguelBelo95</a>
-      <!--
-          Add github emoji. We still need to import some library 
-         <i class="em em-octocat"></i>
-
-          Add Linkedin emoji and make anchor to it as well.
-        -->
+      <span>MiguelBelo95</span>
+      <a id="anchor" href="https://github.com/MiguelBelo95">  <i class="fab fa-github"></i></a>
+      <a id="anchor" href="https://www.linkedin.com/in/josemiguelbelo/"><i class="fab fa-linkedin"></i></a>
     </footer>
   </body>
 </html>
