Adjusting github anchor to RPS repository

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
       <button id="retry-btn"></button>
     </div>
     <footer>
-      <a id="anchor" href="https://www.linkedin.com/in/josemiguelbelo/"><i class="fab fa-linkedin"></i></a>
+      <a id="anchor" href="https://www.linkedin.com/in/josemiguelbelo/"
+        ><i class="fab fa-linkedin"></i
+      ></a>
       <span>MiguelBelo95</span>
-      <a id="anchor" href="https://github.com/MiguelBelo95">  <i class="fab fa-github"></i></a>
+      <a id="anchor" href="https://github.com/MiguelBelo95/Rock-Paper-Scissors">
+        <i class="fab fa-github"></i
+      ></a>
     </footer>
   </body>
 </html>
